# xstatstests

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py  xks.py
.github/workflows/: build.yml  release.yml  test.yml  tests.yml
ci/: environment-3.10.yml  environment-3.11.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml
xks/: __init__.py  _version.py  core.py  exceptions.py  xks.py
xks/tests/: fixtures.py  test_core.py  test_xks.py
xsampletests/: __init__.py  _version.py  core.py
xsampletests/tests/: test_core.py
xstatstests/: __init__.py  _version.py  core.py  scipy.py  utils.py
xstatstests/tests/: fixtures.py  test_core.py  test_scipy.py
