[project]
name = "xstatstest"
authors = [
    { name = "Dougie Squire" },
]
description = "Statistical tests xarray objects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy>=1.8.0",
]
dynamic = ["version"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "xstatstest/_version.py"
versionfile_build = "xstatstest/_version.py"
tag_prefix = "v"
parentdir_prefix = "xstatstest-"

[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report=xml"

[tool.coverage.run]
omit = [
    "setup.py",
    "versioneer.py",
    "xstatstest/_version.py",
]

[tool.ruff]
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["xstatstest"]
